Changes with APR-util 0.9.9

  *) Stop trying to link against GDBM by default.  To enable use of GDBM
     users must now explicitly pass --with-gdbm to configure, since GDBM
     is licensed under the GPL.
     [Garrett Rooney]

  *) Fix VPATH builds, and symlink builds where apr and apr-util
     reside in parallel as symlinks to directories with more explicit
     names, e.g. apr-1.x and apr-util-1.x.  This solves various breakage
     on Solaris in particular with ./buildconf and ./configure.
     [William Rowe]

  *) Add support for Berkeley DB 4.4 to the configure scripts.
     [Garrett Rooney]

Changes with APR-util 0.9.7

  *) Fix apr_rmm_realloc() offset calculation bug.  [Keith Kelleman
     <keith.kelleman oracle.com>]

  *) Fix handling of a premature EOF with the FILE bucket; a new bucket
     is not inserted for each attempt to read past EOF.  PR 34708.
     [Jeff Trawick, Joe Orton]

  *) Fix build failure with non-threaded APR on AIX.  PR 34655.
     [Ryan Murray <rmurray+apache cyberhqz.com>]

  *) Backport the apr_reslist_timeout_set and apr_reslist_invalidate 
     functions already in APR 1.0.x. [Paul Querna]

  *) Fix linking problem on cygwin.  [Max Bowsher <maxb ukf.net>]

Changes with APR-util 0.9.6

  *) Fix the detection of ldap.h on Solaris - it needs lber.h to be
     defined first. [Graham Leggett]

  *) Add an RPM spec file. [Graham Leggett]

  *) Add a build script to create a solaris package. [Graham Leggett]

  *) Add support for Berkeley DB 4.3.  [Jani Averbach <jaa jaa.iki.fi>]

Changes with APR-util 0.9.5

  *) Guarantee and require default address alignment for block offsets
     within segments in the apr_rmm interface.  PR 29873.  [Joe Orton]

  *) SECURITY: CAN-2004-0786 (cve.mitre.org)
     Fix input validation in apr_uri_parse() to avoid passing negative
     length to memcpy for malformed IPv6 literal addresses.
     [Joe Orton]

  *) Fix build issues in paths containing symlinks.  PR 8867.
     [Joe Orton]
